[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/scripts/units/Unit.gd" type="Script" id=1]
[ext_resource path="res://assets/data/unit-data/Prototypes/PrototypeFriendlyInfantryData.tres" type="Resource" id=2]
[ext_resource path="res://assets/prefabs/projectiles/NATOBullet.tscn" type="PackedScene" id=3]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0, 0.133333, 1, 1 )

[sub_resource type="BoxShape" id=2]

[sub_resource type="QuadMesh" id=5]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 1, 0.109804, 1 )

[sub_resource type="CubeMesh" id=7]

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SphereShape" id=9]
radius = 22.0

[node name="KinematicBody" type="KinematicBody" groups=["units"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
projectile = ExtResource( 3 )
data = ExtResource( 2 )
selected_marker = NodePath("MeshInstance2")
muzzle = NodePath("MeshInstance3/Muzzle")
shoot_timer = NodePath("ShootTimer")
vision = NodePath("Vision")

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 2.91764, 0, 0, 0, -1.27534e-07, 2.91764, 0, -2.91764, -1.27534e-07, 0, 0.0240201, 0 )
visible = false
mesh = SubResource( 5 )
material/0 = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( -0.1, 0, -8.74228e-08, 0, 0.1, 0, 8.74227e-09, 0, -1, 0, 1, -2 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Muzzle" type="Position3D" parent="MeshInstance3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.74228e-07, 0, 1 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="Vision" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Vision"]
shape = SubResource( 9 )

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
